[tool.poetry]
name = "nth"
version = "0.1.7"
description = ""
authors = ["Nils Olsson <nilso@enosis.net>"]

# [tool.poetry.scripts]
# nth = "nth.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
rich = "^13.7.1"
# python-dotenv = "^0.20.0"
# rich-argparse = {git = "https://github.com/hamdanal/rich-argparse", rev = "main"}
tyro = "^0.8.4"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
