[project]
name = "nth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Nils Olsson", email = "nilso@enosis.net" }]
requires-python = ">=3.13"
dependencies = ["rich>=13.9.4", "tyro>=0.9.17"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5"]
